fix css for firefox and add overflow auto for wrapper details

--- a/web/src/App.css
+++ b/web/src/App.css
@@ -2,7 +2,6 @@ html, body, #root, .page {
   width: 100%;
   height: 100%;
   font-family: Cabin;
-  overflow: hidden;
 }
 
 .page {
@@ -29,6 +28,7 @@ html, body, #root, .page {
   flex: 1;
   display: flex;
   flex-direction: row;
+  overflow: hidden;
 }
 
 .left-side {
@@ -36,6 +36,7 @@ html, body, #root, .page {
   display: flex;
   flex-direction: column;
   border-right: 1px dashed #CCC;
+  height: 100%;
 }
 
 .right-side {
